manifests/21-toolbox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: toolbox
  namespace: shop
spec:
  restartPolicy: Always
  containers:
    - name: toolbox
      image: curlimages/curl:8.8.0
      command: ["sh", "-c", "sleep infinity"]
