manifests/11-pricing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pricing-svc
  namespace: shop
spec:
  selector:
    app: pricing
  ports:
    - name: http
      port: 5002
      targetPort: 5002
  type: ClusterIP
