manifests/13-inventory-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-svc
  namespace: shop
spec:
  selector:
    app: inventory
  ports:
    - name: http
      port: 5003
      targetPort: 5003
  type: ClusterIP
