manifests/15-checkout-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkout-svc
  namespace: shop
spec:
  selector:
    app: checkout
  ports:
    - name: http
      port: 5001
      targetPort: 5001
  type: ClusterIP
